[package]
name = "appcommon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["full"] }
toml = "0.7.1"
log = "0.4.17"
log4rs = "1.2.0"
redis = { version = "0.23.0", features = [ "cluster-async", "tokio-comp"] }
redis_cluster_rs = "0.1.10"
reqwest = { version = "0.11.13", features = ["json", "native-tls-alpn"] }
chrono = { version = "0.4.23", features = ["serde"] }
lazy_static = "1.4.0"
warp = { version = "0.3.3", features = ["tls"] }
r2d2_redis_cluster = "0.1.6"
rand = "0.8.5"
etcd-rs = "1.0.1"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
signal-hook = "0.3.17"
backtrace = "0.3.69"
strum_macros = "0.25.2"
structopt = "0.3.26"
strum = "0.25.0"
async-channel = "1.9.0"